--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,35 @@
-@import url('http://fonts.googleapis.com/css?family=Noto+Serif:400,400italic,700|Open+Sans:300,400,600,700');
+@import url('https://fonts.googleapis.com/css?family=Open+Sans');
 
 body {
-    font-family: 'Open-Sans';
+    font-family: 'Open Sans', serif;
     font-weight: 400;
     line-height: 1.6em;
     font-size: 14px;
     color: #656565;
+}
+
+header ul {
+    list-style-type: none;
+    text-transform: uppercase;
+    background-color: #fff;
+    overflow: hidden;
+    margin: 0;
+    padding: 0;
+}
+
+header li {
+    float: left;
+}
+
+header ul li a {
+    text-decoration: none;
+    font-weight: 700;
+    color: #111;
+    display: block;
+    padding: 10px 12px;
+    text-align: center;
+}
+
+header ul li a:hover {
+    color: #457EBB;
 }
