--- a/css/styles.css
+++ b/css/styles.css
@@ -33,3 +33,37 @@ header ul li a {
 header ul li a:hover {
     color: #457EBB;
 }
+
+/*
+header ul li {
+    margin-left: 50px;
+}
+header ul li:first-child {
+    margin-left: 0;
+}
+*/
+
+.nav-nav {
+    padding: 20px;
+    margin-bottom: none;
+}
+.nav-nav li:first-child{
+ margin-left: 25%;
+}
+
+.nav-nav li:last-child{
+position: absolute;
+right: 20px;
+}
+
+.img-logo {
+    width: 200px;
+    padding: 0;
+    margin: 0;
+}
+
+.img-logo img {
+    width: 100%;
+    height: auto;
+    margin-bottom: 0;
+}
