--- a/css/styles.css
+++ b/css/styles.css
@@ -68,9 +68,25 @@ right: 20px;
     margin-bottom: 0;
 }
 
-header ul li button#sign {
-    border: 1px solid #34D55B;
-    border-radius: 2px;
+header ul li a#sign-in {
+    border: 1.2px solid #34D55B;
+    border-radius: 4px;
     background-color: #fff;
     color: #ff8C00;
+    padding: 8px 12px;
+}
+
+header ul li a#sign-in:hover {
+    background-color: #79D534;
+    color: #fff;
+    -webkit-transition: all .7s ease;
+    -moz-transition: all .7s ease;
+    -ms-transition: all .7s ease;
+    -o-transition: all .7s ease;
+    transition: all .7s ease
+}
+
+.nav-nav li:last-child {
+    
+
 }
