[Feature #162588667] Add search button

--- a/css/styles.css
+++ b/css/styles.css
@@ -90,3 +90,24 @@ header ul li a#sign-in:hover {
     
 
 }
+
+.search input {
+    margin-left: 35%;
+    width: 230px;
+    padding: 10px 12px 8px 12px;
+    font-size: 14.5px;
+    border: 1.4px solid #aaa;
+    border-radius: 2px;
+    -webkit-transition: all .7s ease;
+    -moz-transition: all .7s ease;
+    -ms-transition: all .7s ease;
+    -o-transition: all .7s ease;
+    transition: all .7s ease;
+}
+
+.search input:hover, .search input:focus {
+    width: 300px;
+    border-color: #7d7d7d;
+}
+
+
