--- a/css/styles.css
+++ b/css/styles.css
@@ -111,3 +111,47 @@ header ul li a#sign-in:hover {
 }
 
 
+@media screen and (max-width: 600px) {
+   header li {
+    float: none;
+   }
+
+   header li a {
+    text-align: left;
+    margin-left: 0;
+    display: block;
+    width: 100%;
+    padding-bottom: 0;
+   }
+
+    .nav-nav {
+        margin-bottom: 0;
+    }
+   .nav-nav li {
+    position: auto;
+    margin: auto;
+    padding: auto;
+   }
+
+   .nav-nav li a {
+        text-align: left;
+        margin-bottom: 0;
+   }
+
+   .nav-nav li:last-child, .nav-nav li:first-child {
+    margin:0;
+    position: relative;
+
+   }
+
+   .search input {
+    margin: 0px;
+    margin-top: -10px;
+    width: 100%;
+   }
+
+   .search input:hover, .search input:focus {
+    width: 100%;
+    border: 2px solid #111;
+   }
+}
