--- a/css/styles.css
+++ b/css/styles.css
@@ -155,3 +155,48 @@ header ul li a#sign-in:hover {
     border: 2px solid #111;
    }
 }
+
+.header-text {
+    padding: 20px;
+    border: 1px solid black;
+    background-color: #111;
+    border-radius: 3px;
+    color: #fff;
+}
+
+.header-text #middle-line {
+    text-align: left;
+    margin-left: 180px;
+}
+
+.header-text:not(#left-stat) {
+    text-align: center;
+
+}
+
+.header-text .right-stat {
+    margin-left: 120px;
+    padding-top: 0px;
+    border: 1px solid black;
+}
+.header-text .left-stat {
+    text-align: left;
+    padding-top: 45px;
+    width: 100px;
+    position: absolute;
+}
+
+.header-text .left-stat h2 {
+    margin-bottom: 0;
+}
+
+.header-text .left-stat #left-tag {
+    text-align: center;
+    font-size: 12px;
+    padding-left: 10px;
+}
+.header-text .big {
+    font-size: 26px;
+    font-weight: 900px;
+    color: #FF8C00;
+}
