[Feature #162588667] Style card appearance

--- a/css/styles.css
+++ b/css/styles.css
@@ -371,6 +371,17 @@ header ul li a#sign-in:hover {
     text-align: justify;
     padding: 4px 12px;
     border-bottom: 0.2px solid rgba(169, 171, 166, .999);
+    -webkit-transition: all .4s ease;
+    -moz-transition: all .4s ease;
+    -ms-transition: all .4s ease;
+    -o-transition: all .4s ease;
+    transition: all .4s ease;
+}
+
+.centre-pane .qtext:hover {
+    background-color: #D8D9D8;
+    color: #333;
+
 }
 
 .centre-pane .qtext p {
@@ -425,4 +436,36 @@ header ul li a#sign-in:hover {
 
 .centre-pane .qicons p:not(.qtags) {
     font-size: 13px;
+}
+
+.centre-pane .qcard {
+     position:relative;
+    -webkit-box-shadow:0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
+       -moz-box-shadow:0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
+            box-shadow:0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
+}
+
+.centre-pane .qcard:before {
+    content:"";
+    position:absolute;
+    z-index:-1;
+    -webkit-box-shadow:0 0 20px rgba(0,0,0,0.8);
+    -moz-box-shadow:0 0 20px rgba(0,0,0,0.8);
+    box-shadow:0 0 20px rgba(0,0,0,0.8);
+    top:10px;
+    bottom:10px;
+    left:0;
+    right:0;
+    -moz-border-radius:100px / 10px;
+    border-radius:100px / 10px;
+}
+
+.centre-pane .qcard:after {
+    right:10px;
+    left:auto;
+    -webkit-transform:skew(8deg) rotate(3deg);
+       -moz-transform:skew(8deg) rotate(3deg);
+        -ms-transform:skew(8deg) rotate(3deg);
+         -o-transform:skew(8deg) rotate(3deg);
+            transform:skew(8deg) rotate(3deg);
 }
